--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,11 @@ discord-webhook = {version = "^0.17.0", extras = ["async"]}
 sqlalchemy = "^1.4.41"
 
 [tool.poetry.dev-dependencies]
-pytest = "*"
+pytest = "^7.1.3"
 pytest-aiohttp = "^1.0.4"
 pytest-env = "^0.6.2"
-pytest-lazy-fixture = "0.6.3"
+pytest-lazy-fixture = "^0.6.3"
+pytest-mock = "^3.8.2"
 
 [tool.black]
 line-length = 120
