--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ aiosqlite = "^0.17.0"
 discord-webhook = {version = "^0.17.0", extras = ["async"]}
 sqlalchemy = "^1.4.41"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 pytest-aiohttp = "^1.0.4"
 pytest-env = "^0.6.2"
