--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,6 +14,8 @@ services:
         - ./.database:/db
         - ./plugin_store:/app
         - ./tests:/tests
+        - ./alembic.ini:/alembic.ini
+        - ./pyproject.toml:/pyproject.toml
     restart: unless-stopped
     ports:
         - "5566:5566"
