--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,18 @@ packages = [{include = "decky_plugin_store"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+alembic = "^1.8.1"
 aiohttp = "^3.7.4.post0"
 aiohttp-cors = "^0.7.0"
 aiosqlite = "^0.17.0"
+asgiref = "^3.5.2"
 # discord-py = "^1.7.3"
 discord-webhook = {version = "^0.17.0", extras = ["async"]}
 sqlalchemy = "^1.4.41"
 
 [tool.poetry.group.dev.dependencies]
+black = "^22.8.0"
+isort = "^5.10.1"
 pytest = "^7.1.3"
 pytest-aiohttp = "^1.0.4"
 pytest-env = "^0.6.2"
