--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     container_name: "${DEPLOYMENT_NAME}"
     environment:
-        - DB_PATH=/db/plugin_store_new.db
+        - DB_PATH
         - ANNOUNCEMENT_WEBHOOK
         - SUBMIT_AUTH_KEY
         - B2_APP_KEY_ID
