--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -19,3 +19,4 @@ services:
     restart: unless-stopped
     ports:
         - "5566:5566"
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 5566
