--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,23 +11,23 @@ readme = "README.md"
 packages = [{include = "decky_plugin_store"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.11"
+aiohttp = "^3.8.1"
 alembic = "^1.8.1"
-aiosqlite = "^0.17.0"
+aiosqlite = "^0.17.0"  # for async sqlite in sqlalchemy
 asgiref = "^3.5.2"
-discord-webhook = {version = "^0.17.0", extras = ["async"]}
+discord-webhook = {version = "^1.0.0", extras = ["async"]}
 fastapi = "^0.85.1"
-python-multipart = "^0.0.5"
+python-multipart = "^0.0.5"  # for multipart forms in fastapi
 sqlalchemy = "^1.4.41"
 uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
-anyio = "^3.6.2"
 black = "^22.8.0"
 httpx = "^0.23.0"
 isort = "^5.10.1"
-pytest = "^7.1.3"
-pytest-aiohttp = "^1.0.4"
+pytest = "^7.2.0"
+pytest-asyncio = "0.19.0"
 pytest-env = "^0.6.2"
 pytest-lazy-fixture = "^0.6.3"
 pytest-mock = "^3.8.2"
