--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,18 @@ uvicorn = "^0.20.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
+flake8 = "^6.0.0"
+flake8-pyproject = "^1.2.2"
 httpx = "^0.23.0"
 isort = "^5.10.1"
+mypy = "^0.991"
 pytest = "^7.2.0"
 pytest-asyncio = "0.19.0"
 pytest-env = "^0.6.2"
 pytest-lazy-fixture = "^0.6.3"
 pytest-mock = "^3.8.2"
+sqlalchemy2-stubs = "*"
+types-pytest-lazy-fixture = "^0.6.3.2"
 
 [tool.black]
 line-length = 120
@@ -53,8 +58,17 @@ exclude = '''
 )
 '''
 
+[tool.flake8]
+max-line-length = 120
+
 [tool.isort]
 line_length = 120
 order_by_type = false
 profile = "black"
 src_paths = ["plugin_store"]
+
+[tool.mypy]
+plugins = [
+#    "sqlmypy",
+    "sqlalchemy.ext.mypy.plugin",
+]
