Changed layout of Dockerfile dirs
- Changed layout of Dockerfile directories to copy over the whole
  project instead of only the "code" part of it. This enables running
  linters with proper configuration without specific workaround for each
  of them
- Removed pytest.ini, moved pytest configuration into the pyproject.toml
  file.
- Moved alembic env-specific (runtime) configuration into the env.py
  file directly.
- Updated readme to match with changes mentioned above and correct some
  outdated information. Also added project description

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -4,18 +4,14 @@ services:
     build: .
     container_name: plugin_store
     environment:
-        - DB_PATH=/db/plugin_store_new.db
+        - DB_PATH=/app/.database/plugin_store_new.db
         - ANNOUNCEMENT_WEBHOOK
         - SUBMIT_AUTH_KEY=deadbeef
         - B2_APP_KEY_ID
         - B2_APP_KEY
         - B2_BUCKET_ID
     volumes:
-        - ./.database:/db
-        - ./plugin_store:/app
-        - ./tests:/tests
-        - ./alembic.ini:/alembic.ini
-        - ./pyproject.toml:/pyproject.toml
+        - .:/app
     restart: unless-stopped
     ports:
         - "5566:5566"
