--- a/alembic.ini
+++ b/alembic.ini
@@ -10,7 +10,7 @@ script_location = /app/plugin_store/database/migrations
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
-prepend_sys_path = .
+prepend_sys_path = plugin_store
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
