--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Plugin Store backend for Decky"
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
-packages = [{include = "decky_plugin_store"}]
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.9"
