--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        ref: "${{ github.event.pull_request.merge_commit_sha }}"
 
     # Workaround: https://github.com/docker/build-push-action/issues/461
     - name: Setup Docker buildx
@@ -69,5 +71,5 @@ jobs:
         id: set
         shell: bash
         run: |
-          name="ghcr.io/${{ github.repository }}:sha-${{ github.sha }}"
+          name="${{ env.REGISTRY }}/${{ github.repository }}:sha-${{ github.sha }}"
           echo "image=${name,,}" >> $GITHUB_OUTPUT
