--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -5,12 +5,6 @@ on:
     branches:
       - "main"
 
-env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
-
 defaults:
   run:
     working-directory: "/app"
@@ -33,6 +27,10 @@ jobs:
       matrix:
         linter: [flake8, isort, black, mypy]
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3
+        with:
+          ref: "${{ github.event.pull_request.merge_commit_sha }}"
       - run: "make lint/${{ matrix.linter }}"
 
   test:
@@ -46,4 +44,8 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.github_token }}
     steps:
+      - name: "Checkout"
+        uses: actions/checkout@v3
+        with:
+          ref: "${{ github.event.pull_request.merge_commit_sha }}"
       - run: "make test"
