--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -16,3 +16,11 @@ services:
     ports:
         - "5566:5566"
     command: uvicorn main:app --reload --host 0.0.0.0 --port 5566
+
+  redis_db:
+    image: redis:3.2.8
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    environment:
+      - REDIS_PORT=6379
