--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,14 @@ services:
     networks:
         - plugins-network
     restart: unless-stopped
+
+  redis_db:
+    image: redis:3.2.8
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    environment:
+      - REDIS_PORT=6379
     
 
 networks:
