--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ fastapi = "^0.85.1"
 python-multipart = "^0.0.5"  # for multipart forms in fastapi
 sqlalchemy = "^1.4.41"
 uvicorn = "^0.20.0"
+limits = {extras = ["redis"], version = "^3.6.0"}
+redis = "^5.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
@@ -75,7 +77,7 @@ plugins = [
 ]
 
 [[tool.mypy.overrides]]
-module = "discord_webhook"
+module = ["discord_webhook", "limits"]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
