--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -18,7 +18,7 @@ services:
     command: uvicorn main:app --reload --host 0.0.0.0 --port 5566
 
   redis_db:
-    image: redis:3.2.8
+    image: redis:latest
     restart: unless-stopped
     ports:
       - 6379:6379
