--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,35 +11,36 @@ readme = "README.md"
 packages = []
 
 [tool.poetry.dependencies]
-python = "^3.9"
-aiohttp = "^3.9.1"
-alembic = "^1.8.1"
-aiosqlite = "^0.17.0" # for async sqlite in sqlalchemy
-asgiref = "^3.5.2"
-discord-webhook = {version = "^0.17.0", extras = ["async"]}
-fastapi = "^0.85.1"
-python-multipart = "^0.0.5"  # for multipart forms in fastapi
+python = "^3.11"
+aiohttp = "^3.10.3"
+alembic = "^1.13.2"
+aiosqlite = "^0.20.0" # for async sqlite in sqlalchemy
+asgiref = "^3.8.1"
+discord-webhook = {version = "^1.3.1", extras = ["async"]}
+fastapi = "^0.112.0"
+pydantic = "^1.10.17"
+python-multipart = "^0.0.9"  # for multipart forms in fastapi
 sqlalchemy = "^1.4.41"
-uvicorn = "^0.20.0"
-limits = {extras = ["redis"], version = "^3.6.0"}
-redis = "^5.0.1"
+uvicorn = "^0.30.6"
+limits = {extras = ["redis"], version = "^3.13.0"}
+redis = "^5.0.8"
 asyncpg = "^0.29.0" # for async postgres in sqalchemy
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.8.0"
-flake8 = "^6.0.0"
-flake8-pyproject = "^1.2.2"
-httpx = "^0.23.0"
-isort = "^5.10.1"
-mypy = "^0.991"
-pytest = "^7.2.0"
-pytest-asyncio = "0.23.2"
-pytest-env = "^0.6.2"
+black = "^24.8.0"
+flake8 = "^7.1.1"
+flake8-pyproject = "^1.2.3"
+httpx = "^0.23.3"
+isort = "^5.13.2"
+mypy = "^1.11.1"
+pytest = "^7.4.4"
+pytest-asyncio = "^0.23.8"
+pytest-env = "^1.1.3"
 pytest-freezer = "^0.4.8"
 pytest-lazy-fixture = "^0.6.3"
-pytest-mock = "^3.8.2"
+pytest-mock = "^3.14.0"
 sqlalchemy2-stubs = "*"
-types-pytest-lazy-fixture = "^0.6.3.2"
+types-pytest-lazy-fixture = "^0.6.3.20240707"
 
 [tool.black]
 line-length = 120
@@ -73,7 +74,6 @@ src_paths = ["plugin_store", "tests"]
 
 [tool.mypy]
 plugins = [
-#    "sqlmypy",
     "sqlalchemy.ext.mypy.plugin",
 ]
 
