--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,7 +14,7 @@ services:
     restart: unless-stopped
     ports:
         - "5566:5566"
-    command: uvicorn main:app --reload --host 0.0.0.0 --port 5566
+    command: sleep infinity
     depends_on:
       postgres_db:
         condition: service_healthy
